--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/GZero-Studio/gzero-studio.github.io/refs/heads/main/images/Icon.png">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/T80Studio/t80studio.github.io/refs/heads/main/images/Icon.png">
     <title>404 - Page Not Found</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,10 +74,10 @@
     <canvas id="stars-canvas"></canvas>
 
     <div class="container">
-        <img src="images/Logo.png" alt="G0 Studio Logo" class="logo">
+        <img src="images/Logo.png" alt="T80 Studio Logo" class="logo">
         <h1>404 - Page Not Found</h1>
         <p>Oops! It looks like you're lost in space.</p>
-        <a href="https://gzerostudio.github.io/">Go back to Home</a>
+        <a href="https://t80studio.github.io/">Go back to Home</a>
     </div>
 
     <script>
