--- a/index.html
+++ b/index.html
@@ -34,14 +34,11 @@
             <div class="games-grid">
                 <div class="game-card">
                     <div class="game-image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9IFxdw1yAGwQFItFQslaio0yCcEWa8Q9NpXQJ-KKQWrmbExhGHhGqLO4&s=10" alt="GatCats">
+                        <img src="images/ComingSoon.png" alt="Project80">
                     </div>
                     <div class="game-content">
-                        <h3 class="game-title">Project80 (Coming Soon)</h3>
-
+                        <h3 class="game-title">Project80</h3>
                         <p class="game-description">T80 Studio's next innovative game project. Currently under development.</p>
-
-
                     </div>
                 </div>
 
