--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         transform-origin: center center;
         opacity: 1;
         visibility: visible;
-        animation-name: moveInAnimation, boxImpactAnimation, fadeOutSplashAnimation;
+        animation-name: moveInAnimation, boxImpactAnimation;
         animation-duration: 0.2s, 0.3s, 0.5s;
         /* *** تم تقليل مدة انتظار الاختفاء إلى ثانيتين *** */
         animation-delay: 1s, 1.2s, 2s;
