--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="T80 Studio - Innovative gaming studio specializing in 2d games. Explore and experience the future of indie game development.">
     <link rel="stylesheet" href="style/style.css">
     <style>
-        body.splash-loading, html.splash-loading {
+    body.splash-loading, html.splash-loading {
         margin: 0;
         padding: 0;
         height: 100%;
@@ -104,13 +104,14 @@
         transform-origin: center center;
         opacity: 1;
         visibility: visible;
-        animation-name: moveInAnimation, boxImpactAnimation;
+        animation-name: moveInAnimation, boxImpactAnimation, fadeOutSplashAnimation;
         animation-duration: 0.2s, 0.3s, 0.5s;
         /* *** تم تقليل مدة انتظار الاختفاء إلى ثانيتين *** */
         animation-delay: 1s, 1.2s, 2s;
         animation-timing-function: cubic-bezier(0.9,0.03,0.69,0.22), ease-out, ease-out;
         animation-fill-mode: forwards, none, forwards;
     }
+
     </style>
     
 </head>
