--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         0% {
             top: calc(50% - 50vmax);
             left: calc(50% + 50vmax);
-            transform: translate(-50%, -50%) rotate(45deg);
+            transform: translate(-50%, -50%);
         }
         100% {
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%) rotate(45deg);
+            transform: translate(-50%, -50%);
         }
     }
 
@@ -44,18 +44,16 @@
             transform: translate(0, 0);
         }
         50% {
-            /* استخدمت القيمة من الكود اللي بعته: translate(-15px, 30px) */
             transform: translate(-15px, 30px);
         }
     }
 
     @keyframes boxImpactAnimation {
         0%, 100% {
-            transform: translate(-50%, -50%) rotate(45deg);
+            transform: translate(-50%, -50%);
         }
         50% {
-             /* استخدمت القيمة من الكود اللي بعته: translate(15px, 30px) */
-             transform: translate(-50%, -50%) rotate(45deg) translate(15px, 30px);
+             transform: translate(-50%, -50%) translate(-15px, 30px);
         }
     }
 
@@ -72,7 +70,6 @@
         z-index: 9998;
         animation-name: fadeOutSplashAnimation;
         animation-duration: 0.5s;
-        /* *** تم تقليل مدة الانتظار إلى ثانيتين *** */
         animation-delay: 2s;
         animation-timing-function: ease-out;
         animation-fill-mode: forwards;
@@ -96,17 +93,15 @@
         position: fixed;
         top: calc(50% - 50vmax);
         left: calc(50% + 50vmax);
-        width: 45px;
-        height: 230px;
-        background-color: #ffffff;
+        width: 460px;
+        height: 460px;
         z-index: 9999;
         transform: translate(-50%, -50%) rotate(45deg);
         transform-origin: center center;
         opacity: 1;
         visibility: visible;
-        animation-name: moveInAnimation, boxImpactAnimation, fadeOutSplashAnimation;
+        animation-name: moveInAnimation, boxImpactAnimation;
         animation-duration: 0.2s, 0.3s, 0.5s;
-        /* *** تم تقليل مدة انتظار الاختفاء إلى ثانيتين *** */
         animation-delay: 1s, 1.2s, 2s;
         animation-timing-function: cubic-bezier(0.9,0.03,0.69,0.22), ease-out, ease-out;
         animation-fill-mode: forwards, none, forwards;
@@ -120,8 +115,7 @@
     <!-- Stars canvas -->
     <canvas id="stars-canvas"></canvas>
 
-    <div id="splash-white-box">
-    </div>
+    <img id="splash-white-box" src="images/0Line.png" alt="the line"></img>
     
     <div id="splash-screen-container">
         <img id="splash-image-content"
