--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         animation-name: imageImpactAnimation;
         animation-duration: 0.3s;
         animation-delay: 1.2s;
-        animation-timing-function: easeOutBack;
+        animation-timing-function: easeOut;
         animation-fill-mode: none;
         z-index: 9998; /* To be under the line image if they overlap */
     }
@@ -105,7 +105,7 @@
         animation-name: moveInAnimation, boxImpactAnimation;
         animation-duration: 0.2s, 0.3s;
         animation-delay: 1s, 1.2s;
-        animation-timing-function: cubic-bezier(0.9,0.03,0.69,0.22), easeOutBack;
+        animation-timing-function: cubic-bezier(0.9,0.03,0.69,0.22), easeOut;
         animation-fill-mode: forwards, none;
     }
     </style>
