--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         background-color: #000000;
         z-index: 9999;
         animation-name: fadeOutSplashAnimation;
-        animation-duration: 0.5s; /* Duration from previous request */
+        animation-duration: 1.5s;
         animation-delay: 0s;
         animation-timing-function: ease-out;
         animation-fill-mode: forwards;
