--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     @keyframes fadeOutSplashAnimation {
         0% { opacity: 1; visibility: visible; }
+        30% { opacity: 1; visibility: visible; }
         100% { opacity: 0; visibility: hidden; }
     }
 
