--- a/index.html
+++ b/index.html
@@ -56,17 +56,21 @@
     <section>
         <div class="container">
             <h2 class="section-title">Our Games</h2>
-            <div class="games-grid">
-                <div class="game-card">
-                    <div class="game-image">
-                        <img src="images/ComingSoon.png" alt="Project80">
-                    </div>
-                    <div class="game-content">
-                        <h3 class="game-title">Project80</h3>
-                        <p class="game-description">T80 Studio's next innovative game project. Currently under development.</p>
-                    </div>
-                </div>
+            
+<div class="games-grid">
+    
+    <a href="https://t80studio.github.io/T80-Search/" class="game-card-link" style="text-decoration: none; color: inherit;">
+        <div class="game-card">
+            <div class="game-image">
+                <img src="images/games/T80-Search.png" alt="T80 Search">
             </div>
+            <div class="game-content">
+                <h3 class="game-title">T80 Search</h3>
+                <p class="game-description">T80 Studio's next innovative game project. Currently under development.</p>
+            </div>
+        </div>
+    </a>
+</div>
         </div>
     </section>
 
