--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="game-content">
                 <h3 class="game-title">T80 Search</h3>
-                <p class="game-description">T80 Studio's next innovative game project. Currently under development.</p>
+                <p class="game-description">A minimalist search portal. Set it as your homepage for a clean start to every Browse session.</p>
             </div>
         </div>
     </a>
