--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
                 </div>
 
                 <div class="game-card">
+                    <a href="https://shaheedahmedt80.itch.io/kino-powerup" class="card-link-overlay"></a>
+                    <div class="game-image">
+                        <img src="images/games/KinoThumbnail.png" alt="Kino PowerUP">
+                    </div>
+                    <div class="game-content">
+                        <h3 class="game-title">Kino PowerUP</h3>
+                        <p class="game-description"><b>Kino PowerUP</b> is a copy of Chrome Dino but with powerfull improvments make the game more exiting.</p>
+                    </div>
+                </div>
+
+                <div class="game-card">
                     <div class="game-image">
                         <img src="images/ComingSoon.png" alt="Project80">
                     </div>
